--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "node dist/index.js",
     "dev": "nodemon --exec ts-node src/index.ts",
     "build": "tsc",
-    "test": "ts-node src/test.ts"
+    "test": "ts-node src/test.ts",
+    "test:dynamic": "ts-node src/test-dynamic.ts"
   },
   "keywords": [],
   "author": "",
@@ -14,12 +15,15 @@
   "type": "commonjs",
   "description": "",
   "dependencies": {
+    "@babel/core": "^7.26.9",
+    "@babel/preset-react": "^7.26.3",
     "express": "^4.21.2",
     "puppeteer": "^24.4.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
   "devDependencies": {
+    "@types/babel__core": "^7.20.5",
     "@types/express": "^4.17.21",
     "@types/node": "^22.13.9",
     "@types/react": "^19.0.10",
